Summary of important user-visible changes for splines 1.1.2:
-------------------------------------------------------------------

 ** automatic smoothing parameter selection in csaps fixed
 
 ** calculation of spline coefficients for unequally spaced points in csaps fixed
 
Summary of important user-visible changes for splines 1.1.1:
-------------------------------------------------------------------

 ** csape fixed to work correctly for matrix inputs
 
 ** csaps and csaps_sel fixed to extrapolate linearly

Summary of important user-visible changes for splines 1.1.0:
-------------------------------------------------------------------

 ** The following functions are new:

      csaps      csaps_sel

 ** fnder() and csape() have been fixed for compatibility with the
    latest Octave versions.

 ** splines package is now dependent on GNU Octave version 3.6.0 or
    later.

 ** Package is no longer automatically loaded.