@@ -8,4 +8,5 @@ Spline functions
  fnder
  fnval
  catmullrom
-
+ tpaps
+ tps_val
