@@ -1,3 +1,10 @@
+Summary of important user-visible changes for splines 1.2.0:
+-------------------------------------------------------------------
+
+ ** The following functions are new:
+
+      tpaps      tps_val
+
 Summary of important user-visible changes for splines 1.1.2:
 -------------------------------------------------------------------
 
